# nu_plugin_hcl

./: Cargo.toml  Justfile  LICENSE  README.md  main.tf
.github/workflows/: publish.yml
src/: main.rs  nu_hcl.rs
