[package]
name = "nu_plugin_hcl"
license = "MIT"
authors = ["Yethal"]
keywords = ["nushell", "hcl", "plugin"]
homepage = "https://github.com/Yethal/nu_plugin_hcl"
repository = "https://github.com/Yethal/nu_plugin_hcl"
description = "A nushell plugin for parsing Hashicorp Configuration Language file format"
version = "0.100.0"
edition = "2021"
readme = "README.md"
exclude = ["main.tf"]

[[bin]]
name = "nu_plugin_hcl"
bench = false

[dependencies]
nu-plugin = "0.100.0"
nu-protocol = { version = "0.100.0", features = ["plugin"] }
hcl-rs = "0.18.0"
serde_json = "1.0.125"